kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-ingress
  namespace: peerprep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/websocket-services: matching-service
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, token"
spec:
  ingressClassName: nginx
  rules:
    - host: peerprep.com
      http:
        paths:
          - path: /user/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /question/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: question-service
                port:
                  number: 3002
          - path: /matching/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: matching-service
                port:
                  number: 8080
